crates/macros/tests/ui/feature_parent.rs
#[derive(nexora_macros::Feature)]
#[nexora(title = "车间", path = "/workshops", parent = "resources")]
struct WorkshopsFeature;

fn main() {}
